fichier yaml/swagger fini, ajout route et controller pour les transactions, modification page transaction
